# awesome-harness

./: .gitignore  .pytest.ini  AGENTS.md  PROMPT.TXT  README.md  README.zh-CN.md  RELEASE_NOTES.md  pyproject.toml  task-progress.md
ahe-coding-skills/: README.md
ahe-product-skills/: README.md
docs/: GARAGE.md  README.md  ROADMAP.md  VISION.md  agent-skills-main-vs-ahe-workflow-report.md  ahe-command-entrypoints.md  ahe-p0-batch-verification.md  ahe-p1-optional-assets-decision.md  ahe-p2-optional-setup-packaging-decision.md  ahe-path-mapping-guide.md  ahe-review-persona-matrix.md  ahe-review-subagent-implementation-checklist.md  ahe-review-subagent-optimization-plan.md  ahe-workflow-core-vs-extensions.md  ahe-workflow-entrypoint-replacement-plan.md  ahe-workflow-entrypoints.md  ahe-workflow-externalization-guide.md  ahe-workflow-family-optimization-execution-plan.md  ahe-workflow-multi-agent-operating-model-design.md  ahe-workflow-shared-conventions.md  ahe-workflow-skill-anatomy.md  ahe-workflow-skill-gap-matrix.md  longtaskforagent-analysis-blog.md  longtaskforagent-main-harness-engineering-analysis.md  mdc-series-gap-analysis-refresh.md
garage/: README.md
mdc-workflow/: README.md  coding-skills-design.md
packs/: README.md
scripts/: benchmark.py  release_smoke.py
skills/: README.md  ahe-skills-design.md  design_rules.md
src/: foundation.py  redaction.py
templates/: AGENTS-template.md  review-record-template.md  task-progress-template.md  verification-record-template.md
tests/: test_bootstrap.py  test_bridge_workflow.py  test_cli.py  test_foundation.py  (+20 more)
(+823 files in other folders)
