[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "garage-runtime"
version = "0.1.0"
description = "Garage runtime scaffolding, core records, and contract registry."
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.package-data]
garage = ["py.typed"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["garage*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
